# TubeViT

./: pyproject.toml  train.sh
scripts/: train.py
tubevit/: dataset.py
